--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -1,6 +1,14 @@
 #Changelog
 All notable changes to this project will be documented in this file.
 
+##[0.9.0.3] - 2018-10-27
+- Fix crash when setting camera FOV to 0.
+- Fix bug with not being able to customize existing cheats having less than 5 keys.
+- Fix bug with enum values for cheat hint types not matching script constants.
+- Fix issue with cheats activated in incorrect phase.
+- Improve logic to adjust item quantities.
+- Store quantities for compass and memcards in savegame by default.
+
 ##[0.9.0.2] - 2018-10-27
 - Ignore flipmaps for default lighting calculation.
 - Add debug info for lighting location.
@@ -12,5 +20,6 @@ All notable changes to this project will be documented in this file.
 ##[0.9.0.0] - 2018-10-24
 - First private beta release.
 
+[0.9.0.3]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/fb90e4a794d92a3f309f5c005a6f53ba58ef33a8...d315892df52465a8c5f86aa77939e5722e7ccc5f
 [0.9.0.2]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/656219dac0718c53a7fa43bc357735b615111639...fb90e4a794d92a3f309f5c005a6f53ba58ef33a8
 [0.9.0.1]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/24e8b8163b090f382bd7caacb0b022eb5ad89104...656219dac0718c53a7fa43bc357735b615111639
