--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -1,6 +1,17 @@
 #Changelog
 All notable changes to this project will be documented in this file.
 
+##[0.9.0.4] - 2018-11-03
+- Fix bug with cheat activation
+- Add default BITS cheat
+- Change default GUNS cheat to GUN
+- Remove default WEAPON cheat (replaced by GUN)
+- Add description about default cheats
+- Improve health item usage
+- Fix action menu sfx
+- Remove poison warp effect from inventory
+- Add note about animation frame rate issue
+
 ##[0.9.0.3] - 2018-10-27
 - Fix crash when setting camera FOV to 0.
 - Fix bug with not being able to customize existing cheats having less than 5 keys.
@@ -20,6 +31,7 @@ All notable changes to this project will be documented in this file.
 ##[0.9.0.0] - 2018-10-24
 - First private beta release.
 
+[0.9.0.4]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/d315892df52465a8c5f86aa77939e5722e7ccc5f...7020d876ee7ad4fbe98eb50fcfee5302f1d5a793
 [0.9.0.3]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/fb90e4a794d92a3f309f5c005a6f53ba58ef33a8...d315892df52465a8c5f86aa77939e5722e7ccc5f
 [0.9.0.2]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/656219dac0718c53a7fa43bc357735b615111639...fb90e4a794d92a3f309f5c005a6f53ba58ef33a8
 [0.9.0.1]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/24e8b8163b090f382bd7caacb0b022eb5ad89104...656219dac0718c53a7fa43bc357735b615111639
