--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -1,6 +1,12 @@
 #Changelog
 All notable changes to this project will be documented in this file.
 
+##[0.9.0.6] - 2018-11-18
+- Change ITEM_SELECT to ITEM_ACTIVATE for script constants.
+- Disable cheats if related TRNG Setting is set.
+- Improve customizing of item quantities.
+- Add default item quantity for new items.
+
 ##[0.9.0.5] - 2018-11-12
 - Add divider setting for item quantities.
 - Add option to disable fade in+out of item pickup displays.
@@ -35,6 +41,7 @@ All notable changes to this project will be documented in this file.
 ##[0.9.0.0] - 2018-10-24
 - First private beta release.
 
+[0.9.0.6]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/25c2f4c3dc55b577eeb7e037717e832c44fa465b...478d7a0158ff194cee214967621200ffbd040fb7
 [0.9.0.5]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/7020d876ee7ad4fbe98eb50fcfee5302f1d5a793...25c2f4c3dc55b577eeb7e037717e832c44fa465b
 [0.9.0.4]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/d315892df52465a8c5f86aa77939e5722e7ccc5f...7020d876ee7ad4fbe98eb50fcfee5302f1d5a793
 [0.9.0.3]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/fb90e4a794d92a3f309f5c005a6f53ba58ef33a8...d315892df52465a8c5f86aa77939e5722e7ccc5f
