--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -1,6 +1,13 @@
 #Changelog
 All notable changes to this project will be documented in this file.
 
+##[0.9.0.7] - 2018-11-28
+- Improve compass oscillation
+- Replace compass oscillation settings with attraction and friction
+- Add customizable offset for compass needle
+- Add customizable target for compass
+- Add option to disable spinning of items when selected
+
 ##[0.9.0.6] - 2018-11-18
 - Change ITEM_SELECT to ITEM_ACTIVATE for script constants.
 - Disable cheats if related TRNG Setting is set.
@@ -41,6 +48,7 @@ All notable changes to this project will be documented in this file.
 ##[0.9.0.0] - 2018-10-24
 - First private beta release.
 
+[0.9.0.7]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/478d7a0158ff194cee214967621200ffbd040fb7...0e069cb504beff4835ed77b58b9a151867deea9c
 [0.9.0.6]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/25c2f4c3dc55b577eeb7e037717e832c44fa465b...478d7a0158ff194cee214967621200ffbd040fb7
 [0.9.0.5]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/7020d876ee7ad4fbe98eb50fcfee5302f1d5a793...25c2f4c3dc55b577eeb7e037717e832c44fa465b
 [0.9.0.4]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/d315892df52465a8c5f86aa77939e5722e7ccc5f...7020d876ee7ad4fbe98eb50fcfee5302f1d5a793
