--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -1,6 +1,9 @@
 #Changelog
 All notable changes to this project will be documented in this file.
 
+##[0.9.1.0] - 2019-01-21
+- Add condition trigger to check if classic ring inventory is enabled or not.
+
 ##[0.9.0.9] - 2019-01-06
 - Add option to disable classic ring inventory per level.
 
@@ -54,6 +57,7 @@ All notable changes to this project will be documented in this file.
 ##[0.9.0.0] - 2018-10-24
 - First private beta release.
 
+[0.9.1.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/f405c6a3e6685be07c0b911118167b2e6386e738...c9a81fab37569542f775461fc92292ed60f30e61
 [0.9.0.9]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/f4085aed0e2ec04e5f94a54c41e4dacc1fcd2263...f405c6a3e6685be07c0b911118167b2e6386e738
 [0.9.0.8]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/0e069cb504beff4835ed77b58b9a151867deea9c...f4085aed0e2ec04e5f94a54c41e4dacc1fcd2263
 [0.9.0.7]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/478d7a0158ff194cee214967621200ffbd040fb7...0e069cb504beff4835ed77b58b9a151867deea9c
