--- a/doc/Changelog.txt
+++ b/doc/Changelog.txt
@@ -1,6 +1,9 @@
 #Changelog
 All notable changes to this project will be documented in this file.
 
+##[1.0.0.0] - 2019-01-31
+- First public release.
+
 ##[0.9.1.1] - 2019-01-26
 - Remove excessive tomb4_log.exe warnings about missing customize commands.
 - Add UnloadTriggerGroupId field to CUST_CINV_AMMO customize command.
@@ -62,6 +65,7 @@ All notable changes to this project will be documented in this file.
 ##[0.9.0.0] - 2018-10-24
 - First private beta release.
 
+[1.0.0.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/f3e88fb1d59f82fd1fabe3109a27b06884d06fd7...87bbe968ce12c8fcee5f81c99793ac8ab7a664a2
 [0.9.1.1]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/c9a81fab37569542f775461fc92292ed60f30e61...f3e88fb1d59f82fd1fabe3109a27b06884d06fd7
 [0.9.1.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/f405c6a3e6685be07c0b911118167b2e6386e738...c9a81fab37569542f775461fc92292ed60f30e61
 [0.9.0.9]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/f4085aed0e2ec04e5f94a54c41e4dacc1fcd2263...f405c6a3e6685be07c0b911118167b2e6386e738
