--- a/doc/Changelog.txt
+++ b/doc/Changelog.txt
@@ -9,7 +9,7 @@ All notable changes to this project will be documented in this file.
 - Add AlwaysShowAmmo field to CUST_CINV_DISPLAY to show ammo even when weapon has been picked up.
 - Add PickupQuantity field to CUST_CINV_ITEM_QUANTITY to customize pickup amounts.
 - Add WeaponPickupQuantity field to CUST_CINV_AMMO to customize ammo amount received with weapons.
-- Add TemplateStringIndex field to CUST_CINV_TEXT to use a template for certain inventory strings.
+- Add CINV_TXT_ITEM_QTY_IDLE and CINV_TXT_ITEM_QTY_ACTIVE text types to customize quantity text.
 - Fix issue with horizon showing around edges of sprites in pickup notifier.
 - Text variable placeholders can now be used in inventory strings.
 - Quantities are now shown using the classic style of TR1-3.
@@ -109,7 +109,7 @@ All notable changes to this project will be documented in this file.
 ##[0.9.0.0] - 2018-10-24
 - First private beta release.
 
-[1.2.0.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/01e07044744d7b5ea2d59af3fd701eedec4af552...f3f76c4a7056aae13e21a9fc0a73bab4b4b9920a
+[1.2.0.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/01e07044744d7b5ea2d59af3fd701eedec4af552...c4d12f150d4a3bfff8c56ab5f89539d061e97913
 [1.1.1.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/3fbadf55306cead61c2d78f3469e0658c76ac16c...01e07044744d7b5ea2d59af3fd701eedec4af552
 [1.1.0.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/87bbe968ce12c8fcee5f81c99793ac8ab7a664a2...3fbadf55306cead61c2d78f3469e0658c76ac16c
 [1.0.0.0]: https://gitlab.com/jacquesmn/trng_plugin_classicinventory/compare/f3e88fb1d59f82fd1fabe3109a27b06884d06fd7...87bbe968ce12c8fcee5f81c99793ac8ab7a664a2
